Add Swagger Documentation
